--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -48,6 +48,25 @@ button{
   text-align: center;
 }
 
+div { line-height: 1.35; } 
+
+table {
+  border-collapse: collapse;
+  border: 5px solid rgb(0, 0, 0);
+  letter-spacing: 1px;
+  font-size: 1.5rem;
+}
+td, th {
+  border: 1px solid rgb(190,190,190);
+  padding: 10px 100px;
+}
+td {
+  text-align: center;
+}
+caption {
+  padding: 10px;
+}
+
 #erro{
 color:red;
 }
